# soyscope

./: .env.example  .gitignore  CLAUDE.md  CLAUDE_CODE_HANDOFF.md  README.md  SoyScope.bat  pyproject.toml  requirements.txt  start-here.md
.claude/agents/: context-effectiveness-auditor.md  system-auditor.md
data/: taxonomy.json
docs/: search-approaches.md  soy-uses.md
scripts/: backfill_sources.py  check_db_state.py  check_quality.py  seed_dummy_data.py
src/soyscope/: __init__.py  cache.py  circuit_breaker.py  cli.py  config.py  db.py  dedup.py  evaluation.py  known_apps_seed.py  models.py  novelty.py  orchestrator.py  ranking.py  rate_limit.py
src/soyscope/collectors/: __init__.py  checkoff_importer.py  historical_builder.py  oa_resolver.py  query_generator.py  refresh_runner.py  usb_deliverables_importer.py
src/soyscope/enrichment/: __init__.py  batch_enricher.py  classifier.py  novelty_scorer.py  summarizer.py
src/soyscope/gui/: __init__.py  main_window.py
src/soyscope/outputs/: __init__.py  dashboard.py  excel_export.py  word_export.py
src/soyscope/sources/: __init__.py  agris_source.py  base.py  core_source.py  crossref_source.py  exa_source.py  lens_source.py  openalex_source.py  osti_source.py  patentsview_source.py  pubmed_source.py  sbir_source.py  (+4 more)
tests/: test_checkpoints.py  test_db.py  test_dedup.py  test_enrichment.py  test_evaluation.py  test_known_applications.py  test_multi_source.py  test_novelty.py  test_oa_resolver.py  test_query_generator.py  test_usb_deliverables.py
tests/test_sources/: test_openalex.py  test_tier1_sources.py
(+29 files in other folders)
